...
                        android:layout_height="@dimen/core_stroke_width"
                        android:layout_marginStart="@dimen/core_space_72"
                        android:layout_marginEnd="@dimen/core_space_16"
                        android:background="@color/core_color_outline_variant" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rowLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/core_size_80"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
...
                            android:id="@+id/tvLanguageTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/core_space_16"
                            android:text="@string/settings_language_section_title"
                            android:textAppearance="@style/TextAppearance.AndroidComposeBase.BodyEmphasis"
                            app:layout_constraintBottom_toTopOf="@id/tvLanguageSummary"
                            app:layout_constraintEnd_toStartOf="@id/ivLanguageChevron"
                            app:layout_constraintStart_toEndOf="@id/ivLanguage"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
...
