<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainNavigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.thanhng224.androidcomposebase.appshell.home.HomeFragment"
        android:label="@string/home_title" />

    <fragment
        android:id="@+id/demoFragment"
        android:name="com.thanhng224.androidcomposebase.sample.demo.presentation.ui.DemoFragment"
        android:label="@string/demo_title" />

    <fragment
        android:id="@+id/designSystemFragment"
        android:name="com.thanhng224.androidcomposebase.sample.designsystem.presentation.ui.DesignSystemFragment"
        android:label="@string/design_system_title" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.thanhng224.androidcomposebase.feature.settings.presentation.ui.SettingsFragment"
        android:label="@string/settings_title" />

</navigation>
