...
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/core_space_24"
        android:paddingTop="@dimen/core_space_24"
        android:paddingBottom="@dimen/core_space_32">

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appshell_home_greeting"
            android:textAppearance="@style/TextAppearance.AndroidComposeBase.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/core_space_8"
...
